--- a/views/curri_page.ejs
+++ b/views/curri_page.ejs
@@ -173,7 +173,7 @@
             <h4 style="color:black">
               배운 내용으로
               <br />
-              프로그램을 만들거나
+              프로그램 제작,
               <br />
               대회를 나갑니다!
             </h4>
@@ -187,19 +187,17 @@
   <footer class="bg-light py-2">
     <div class="container text-center">
       <div class="row justify-content-center">
-        <div class="col-4">
-
+        <div class="col-md-3">
           <div style="display: flex; flex-direction: column; justify-content: center">
-            <img src="../image/all_logo.png" width="400" height="200" style="margin-bottom: 5px" />
-            <div class="container px-4 px-lg-5">
-              <div class="small text-muted" style="margin-left: 140px">
+            <img src="../image/all_logo.png" width="200" height="200" style="margin-left: 90px; margin-top: 20px;" />
+            <div class="row-md-3">
+              <div class="small text-muted" style="margin-left: 50px">
                 Copyright &copy;코딩나라(Coding-nara)
               </div>
             </div>
           </div>
         </div>
-        <div class="col-4">
-
+        <div class="col-md-4" style="margin-top: 60px;">
           <div style="display: flex; justify-content: center; margin-bottom: 10px">
             <a id="insta-btn" href="https://www.instagram.com/coding_nara/saved/" target="”_blank”"
               style="margin-right: 10px">
@@ -215,8 +213,8 @@
               <a href="/policy/tos">이용약관</a>
             </div>
           </div>
-          <div class="container px-4 px-lg-5" style="margin-bottom: 10px">
-            <div class="small text-left text-muted">
+          <div  class="container px-4 px-lg-5" style="margin-bottom: 10px">
+            <div align="left" class="small text-left text-muted" style="margin-left: 60px;">
               <p>
                 대표자: 장영재, 박민수<br />
                 사업자번호: 148-14-01860 사업자 정보 확인<br />
